--- a/src/RollDice.css
+++ b/src/RollDice.css
@@ -2,9 +2,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 
-.RollDice-dices {
+.RollDice-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.RollDice-button {
+  width: 15em;
+  padding: 1.5em;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+  margin-top: 3em;
+}
+
+.RollDice-button:hover {
+  background-color: slateblue;
+  cursor: pointer;
+}
+
+.RollDice-button:disabled {
+  background-color: rgba(105, 90, 205, 0.515);
 }
